istio/mtls/03-dr-disable-toss.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: disable-mtls-toss
  namespace: come2us
spec:
  host: api.tosspayments.com
  trafficPolicy:
    tls:
      mode: DISABLE
